[fix(ui), bug(js)] [Fixed responsiveness faults when screen on mobile, disabled enableProductHeightMatching, throws a continuous error]

--- a/css/cake.css
+++ b/css/cake.css
@@ -38,7 +38,10 @@
   display: grid;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 48em) {
+  .hero-banner {
+    font-size: var(--quote-lg);
+  }
   #products {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(8, 1fr);
